# opencv

./: .gitignore  BUILD.bazel  MODULE.bazel
bazel/: opencv.bzl
