load("@rules_license//rules:license.bzl", "license")
load("@org_opencv//bazel:opencv.bzl", "opencv_base", "opencv_module")

package(
    default_applicable_licenses = [":license"],
)

license(
    name = "license",
    package_name = "opencv",
)

exports_files([
    "LICENSE",
    "MODULE.bazel",
])

CONFIG = {
    "modules" : [
        "core",
    ],
}

opencv_base(config=CONFIG)

DISPATCH = ["sse4_2", "avx", "avx2"]

opencv_module(
    name = "core",
    config = CONFIG,
    dispatched_files = {
        "arithm" : DISPATCH,
        "convert" : DISPATCH,
        "convert_scale" : DISPATCH,
        "count_non_zero" : DISPATCH,
        "has_non_zero" : DISPATCH,
        "stat" : DISPATCH,
        "mathfuncs_core" : DISPATCH,
        "matmul" : DISPATCH,
        "mean" : DISPATCH,
        "merge" : DISPATCH,
    },
    deps = ["@eigen", "@zlib"],
)
